ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: http://frontend-service
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
spec:
  rules:
    - host: frontend-service
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
    - host: pdf-generator-service
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: pdf-generator-service
                port:
                  number: 4003
    - host: cv-maker-service
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: cv-maker-service
                port:
                  number: 4004
    - host: authentication-service
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 4002
